--- a/config/sentry.nginx.vhost.conf
+++ b/config/sentry.nginx.vhost.conf
@@ -1,7 +1,7 @@
 server {
 
     listen   80;
-    server_name sentry.staging.jinglingzhijing.com;
+    server_name sentry.myhost.com;
 
     location / {
         proxy_pass http://127.0.0.1:9000;
